# nexusfeed-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  glama.json  pyproject.toml
.claude-plugin/: marketplace.json
mcp_server/: client.py  config.py  prompts.py  server.py
mcp_server/tools/: abc.py  ltl.py
plugins/nexusfeed-abc/: .mcp.json  README.md
plugins/nexusfeed-abc/.claude-plugin/: plugin.json
plugins/nexusfeed-ltl/: .mcp.json  README.md
plugins/nexusfeed-ltl/.claude-plugin/: plugin.json
registry/abc/: server.json
registry/ltl/: server.json
